--- a/index.html
+++ b/index.html
@@ -13,113 +13,203 @@
 <body>
 
   <div class="container">
-    <div class="container__side-bar">
-      Step 1
-      Your info
-
-      Step 2
-      Select plan
-
-      Step 3
-      Add-ons
-
-      Step 4
-      Summary
-    </div>
-    <div class="container__steps">
-      <div class="container__steps__step1">
-        <!-- Step 1 start -->
-
-        <h3>Personal info</h3>
-
-        <p>Please provide your name, email address, and phone number.</p>
-
-        Name
-        e.g. Stephen King
-
-        Email Address
-        e.g. stephenking@lorem.com
-
-        Phone Number
-        e.g. +1 234 567 890
-
-        Next Step
-
-        <!-- Step 1 end -->
+    <img class="container__img" src="./assets/images/bg-sidebar-mobile.svg" alt="Side image">
+    <form id="form">
+      <div class="container__side-bar">
+        <div class="container__side-bar__item container__side-bar__item__1">
+          <div class="container__side-bar__item__count active">1</div>
+          <div class="container__side-bar__item__details disabled">
+            <div class="container__side-bar__item__details__step-no">Step 1</div>
+            <div class="container__side-bar__item__details__step-details">Your info</div>
+          </div>
+        </div>
+        <div class="container__side-bar__item container__side-bar__item__2">
+          <div class="container__side-bar__item__count">2</div>
+          <div class="container__side-bar__item__details disabled">
+            <div class="container__side-bar__item__details__step-no">Step 2</div>
+            <div class="container__side-bar__item__details__step-details">Select plan</div>
+          </div>
+        </div>
+        <div class="container__side-bar__item container__side-bar__item__3">
+          <div class="container__side-bar__item__count">3</div>
+          <div class="container__side-bar__item__details disabled">
+            <div class="container__side-bar__item__details__step-no">Step 3</div>
+            <div class="container__side-bar__item__details__step-details">Add-ons</div>
+          </div>
+        </div>
+        <div class="container__side-bar__item container__side-bar__item__4">
+          <div class="container__side-bar__item__count">4</div>
+          <div class="container__side-bar__item__details disabled">
+            <div class="container__side-bar__item__details__step-no">Step 4</div>
+            <div class="container__side-bar__item__details__step-details">Summary</div>
+          </div>
+        </div>
       </div>
-      <div class="container__steps__step2">
-        <!-- Step 2 start -->
+      <div class="container__steps">
+        <div class="container__steps__step-item disabled">
+          <div class="container__steps__form">
+            <h3>Personal info</h3>
+            <p>Please provide your name, email address, and phone number.</p>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="e.g. Stephen King">
+            <label for="email">Email Address</label>
+            <input type="text" id="email" name="email" placeholder="e.g. stephenking@lorem.com">
+            <label for="phone">Phone Number</label>
+            <input type="text" id="phone" name="phone" placeholder="e.g. +1 234 567 890">
+          </div>
+          <div class="container__steps__buttons one-button">
+            <button class="next-button" type="button">Next Step</button>
+          </div>
+        </div>
+        <div class="container__steps__step-item disabled">
+          <div class="container__steps__form">
+            <h3>Select your plan</h3>
+            <p>You have the option of monthly or yearly billing.</p>
 
-        Select your plan
-        You have the option of monthly or yearly billing.
+            <div class="container__steps__step-item">
+              <div class="container__steps__step2__plans">
+                <img src="assets/images/icon-arcade.svg" alt="Select Arcade Plan">
+                <div class="container__steps__step2__plans__details">
+                  <div class="container__steps__step2__plans__details__name">Arcade</div>
+                  <div class="container__steps__step2__plans__details__price monthly">
+                    $9/mo
+                  </div>
+                  <div class="container__steps__step2__plans__details__price annual">
+                    $90/yr
+                  </div>
+                  <div class="container__steps__step2__plans__details__free annual">
+                    2 months free
+                  </div>
+                </div>
+              </div>
+              <div class="container__steps__step2__plans">
+                <img src="assets/images/icon-advanced.svg" alt="Select Advanced Plan">
+                <div class="container__steps__step2__plans__details">
+                  <div class="container__steps__step2__plans__details__name">Advanced</div>
+                  <div class="container__steps__step2__plans__details__price monthly">
+                    $12/mo
+                  </div>
+                  <div class="container__steps__step2__plans__details__price annual">
+                    $120/yr
+                  </div>
+                  <div class="container__steps__step2__plans__details__free annual">
+                    2 months free
+                  </div>
+                </div>
+              </div>
+              <div class="container__steps__step2__plans">
+                <img src="assets/images/icon-pro.svg" alt="Select Pro Plan">
+                <div class="container__steps__step2__plans__details">
+                  <div class="container__steps__step2__plans__details__name">Pro</div>
+                  <div class="container__steps__step2__plans__details__price monthly">
+                    $15/mo
+                  </div>
+                  <div class="container__steps__step2__plans__details__price annual">
+                    $150/yr
+                  </div>
+                  <div class="container__steps__step2__plans__details__free annual">
+                    2 months free
+                  </div>
+                </div>
+              </div>
+              <div class="container__steps_step2__payment-type">
+                <div class="container__steps_step2__payment-type__value">
+                  Monthly
+                </div>
+                <label class="switch">
+                  <input title="payment-type" type="checkbox">
+                  <span class="slider round"></span>
+                </label>
+                <div class="container__steps_step2__payment-type__value">
+                  Yearly
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container__steps__buttons">
+            <button class="back-button" type="button">Go Back</button>
+            <button class="next-button" type="button">Next Step</button>
+          </div>
+        </div>
+        <div class="container__steps__step-item disabled">
+          <div class="container__steps__form">
+            <h3>Pick add-ons</h3>
+            <p>Add-ons help enhance your gaming experience.</p>
 
-        Arcade
-        $9/mo
+            <div class="container__steps__step3__addon">
+              <div class="container__steps__step3__addon__item checked">
+                <input type="checkbox" name="add-on" title="add-on" id="online-service">
+                <div class="container__steps__step3__addon__item__details">
+                  <div class="container__steps__step3__addon__item__details__header">Online service</div>
+                  <div class="container__steps__step3__addon__item__details__description">
+                    Access to multiplayer games
+                  </div>
+                </div>
+                <div class="container__steps__step3__addon_item__price monthly">+$1/mo</div>
+                <div class="container__steps__step3__addon_item__price annual">+$10/yr</div>
+              </div>
+              <div class="container__steps__step3__addon__item">
+                <input type="checkbox" name="add-on" title="add-on" id="larger-storage">
+                <div class="container__steps__step3__addon__item__details">
+                  <div class="container__steps__step3__addon__item__details__header">Larger storage</div>
+                  <div class="container__steps__step3__addon__item__details__description">
+                    Extra 1TB of cloud save
+                  </div>
+                </div>
+                <div class="container__steps__step3__addon_item__price monthly">+$2/mo</div>
+                <div class="container__steps__step3__addon_item__price annual">+$20/yr</div>
+              </div>
+              <div class="container__steps__step3__addon__item">
+                <input type="checkbox" name="add-on" title="add-on" id="customize-profile">
+                <div class="container__steps__step3__addon__item__details">
+                  <div class="container__steps__step3__addon__item__details__header">Customizable Profile
+                  </div>
+                  <div class="container__steps__step3__addon__item__details__description">
+                    Custom theme on your profile
+                  </div>
+                </div>
+                <div class="container__steps__step3__addon_item__price monthly">+$2/mo</div>
+                <div class="container__steps__step3__addon_item__price annual">+$10/yr</div>
+              </div>
+            </div>
+          </div>
+          <div class="container__steps__buttons">
+            <button class="back-button" type="button">Go Back</button>
+            <button class="next-button" type="button">Next Step</button>
+          </div>
+        </div>
+        <div class="container__steps__step-item">
+          <div class="container__steps__form">
 
-        Advanced
-        $12/mo
+            <h3>Finishing up</h3>
+            <p>Double-check everything looks OK before confirming.</p>
+            <div class="container__steps__step-item__step4__plan">
+              <div class="container__steps__step-item__step4__plan__details">
+                <div class="container__steps__step-item__step4__plan__details__info">
 
-        Pro
-        $15/mo
-
-        Monthly
-        Yearly
-
-        Go Back
-        Next Step
-
-        <!-- Step 2 end -->
-      </div>
-      <div class="container__steps__step3">
-        <!-- Step 3 start -->
-
-        Pick add-ons
-        Add-ons help enhance your gaming experience.
-
-        Online service
-        Access to multiplayer games
-        +$1/mo
-
-        Larger storage
-        Extra 1TB of cloud save
-        +$2/mo
-
-        Customizable Profile
-        Custom theme on your profile
-        +$2/mo
-
-        Go Back
-        Next Step
-
-        <!-- Step 3 end -->
-      </div>
-      <div class="container__steps__step4">
-        <!-- Step 4 start -->
-
-        Finishing up
-        Double-check everything looks OK before confirming.
-
-        <!-- Dynamically add subscription and add-on selections here -->
-
-        Total (per month/year)
-
-        Go Back
-        Confirm
-
-        <!-- Step 4 end -->
-      </div>
-      <div class="container__steps__step5">
-        <!-- Step 5 start -->
-
-        Thank you!
-
-        Thanks for confirming your subscription! We hope you have fun
-        using our platform. If you ever need support, please feel free
-        to email us at support@loremgaming.com.
-
-        <!-- Step 5 end -->
-      </div>
-    </div>
+                </div>
+              </div>
+              <div class="monthly">Total (per month)</div>
+              <div class="monthly">+$12/mo</div>
+              <div class="annual">Total (per year)</div>
+              <div class="annual">+120/yr</div>
+            </div>
+          </div>
+          <div class="container__steps__buttons">
+            <button class="back-button" type="button">Go Back</button>
+            <button class="next-button" type="button">Next Step</button>
+          </div>
+        </div>
+        <div class="container__steps__step-item disabled">
+          <div class="container__steps__form center">
+            <img src="./assets/images/icon-thank-you.svg" alt="check-mark">
+            <h3>Thank you!</h3>
+            <p>Thanks for confirming your subscription! We hope you have fun
+              using our platform. If you ever need support, please feel free
+              to email us at support@loremgaming.com.</p>
+          </div>
+        </div>
+    </form>
   </div>
 </body>
 </html>
